<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/faq_text_orange"
            android:text="@string/faq_question1"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/faq_text_black"
            android:layout_gravity="center_vertical|start"
            android:gravity="start"
            android:textColor="?attr/textcolor"
            android:text="@string/faq_answer1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/faq_text_orange"
            android:text="@string/faq_question2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/faq_text_black"
            android:layout_gravity="center_vertical|start"
            android:gravity="start"
            android:textColor="?attr/textcolor"
            android:text="@string/faq_answer2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/faq_text_orange"
            android:text="@string/faq_question3"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/faq_text_black"
            android:layout_gravity="center_vertical|start"
            android:gravity="start"
            android:textColor="?attr/textcolor"
            android:text="@string/faq_answer3"/>

    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>