<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorPrimary">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/add_ticket_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/add_ticket_instructions"
                    android:textAlignment="center"
                    android:textColor="?attr/textcolor"
                    android:textSize="@dimen/title_sell" />

                <ProgressBar
                    android:id="@+id/progressBar_ticket_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/ticket_type_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:textColor="?attr/textcolor"
                    app:layout_constraintBottom_toTopOf="@+id/add_ticket_validate_btn"
                    app:layout_constraintTop_toBottomOf="@+id/add_ticket_instructions" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_ticket_validate_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_sell_height"
                    android:layout_marginBottom="40dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableStart="@drawable/ic_check_white_24dp"
                    android:screenOrientation="portrait"
                    android:text="@string/validate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_sell" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goToCreateTicketActivity"
                    android:text="@string/create_ticket_description"
                    android:textAlignment="center"
                    android:textSize="@dimen/click_sell" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goToCreateTicketActivity"
                    android:text="@string/create_tickets_description1"
                    android:textAlignment="center"
                    android:textSize="@dimen/click_sell" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>