<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:importantForAutofill="noExcludeDescendants"
        android:background="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo_yb_stroked" />
        </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_weight="1">


                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="@dimen/username_width"
                    android:layout_height="@dimen/username_height"
                    android:layout_marginBottom="3dp"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/iceland_poppy"
                    android:textColorHint="@color/colorPrimary"
                    android:backgroundTint="?attr/textcolor"
                    android:layout_gravity="center"
                    android:textSize="@dimen/edit_textsize"/>

                <LinearLayout
                    android:layout_width="@dimen/username_width"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    >

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="@dimen/username_width"
                        android:layout_height="@dimen/username_height"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/iceland_poppy"
                        android:textColorHint="@color/colorPrimary"
                        android:backgroundTint="?attr/textcolor"
                        android:layout_gravity="center"
                        android:textSize="@dimen/edit_textsize"/>
                    <Button
                        android:id="@+id/password_visibility"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/ic_visibility_green_24dp" />


                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_um_btn"
                    android:layout_width="@dimen/login_button_width"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_marginBottom="10dp"
                    app:backgroundTint="@color/colorPrimary"
                    android:onClick="loginViaUm"
                    android:padding="5dp"
                    android:drawableStart="@drawable/ic_person_white_24dp"
                    android:text="@string/login_um"
                    android:textColor="?attr/textcolor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="@dimen/land_textsize"/>



                <TextView
                    android:id="@+id/textUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textColor="?attr/textcolor"
                    android:clickable="true"
                    android:onClick="goToUrl"
                    android:layout_gravity="center"
                    android:textSize="@dimen/no_account_text"/>

            </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>